# PROJET_FIL_ROUGE_W3_G4

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.test  Dockerfile  README.md  Readme.md  alembic.ini  config.py  main.py  pyproject.toml  requirement.txt  ruff.toml  test.env
backend/alembic/: env.py
backend/alembic/versions/: 03a026d10d06_add_s3_object_table_and_modify_video_.py  2023_07_22_1601-37a8c829ae9f_add_tag_type_to_tag_table_and_delete_on_.py  2023_07_25_2124-initial_migration.py  2023_07_25_2131-constraint_keys.py  2023_07_26_0953-modify_tag_system.py  2023_07_31_0902-update_name_table_add_title_to_work_.py  2023_07_31_1028-update_name_table_add_title_to_work_.py  2023_08_08_1314-modify_comment_system.py  2023_08_08_2116-comment_system.py  2023_08_09_2242-annotation_system.py  2023_08_10_0916-annotation_system.py  2023_08_11_0811-link_video_masterclass.py  2023_08_11_0945-link_subtitle_to_masterclass.py  2023_08_12_0827-update_work_analysis_translation.py  2023_08_22_1512-.py  2023_08_22_1943-merge_heads.py  2023_08_31_0852-add_meta_to_masterclass.py  2023_09_05_0750-message.py  2023_09_05_1038-add_image_academy_simplify_image_.py  2023_09_05_1157-add_roles.py  2023_09_05_1247-merge_conflicts.py  2335c7d393fc_add_masterclass.py  3d3845c9e048_updates_tables.py  52ca3f11c5fd_add_s3_object_table.py  6064a459b56d_update_partition_subtitle_video_image.py  6eee6ba2e907_add_log_table.py  (+6 more)
backend/database/: db_engine.py
backend/routers/: index.py
backend/scripts/: create_academy.py
backend/src/: main.py
(+373 files in other folders)
